packages/pulse-core/force-app/main/default/objects/Action_Hub_Column_Config__mdt/Action_Hub_Column_Config__mdt.object-meta.xml
<CustomObject>
    <label>Action Hub Column Config</label>
    <pluralLabel>Action Hub Column Configs</pluralLabel>
</CustomObject>