packages/pulse-core/force-app/main/default/objects/Action_Hub_Column_Config__mdt/fields/Columns_JSON__c.field-meta.xml
<CustomField>
    <fullName>Columns_JSON__c</fullName>
    <label>Columns JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON array of {field, label} column definitions rendered in the Global Action Hub.</description>
</CustomField>