packages/pulse-core/force-app/main/default/objects/Action_Hub_Column_Config__mdt/fields/Config_Key__c.field-meta.xml
<CustomField>
    <fullName>Config_Key__c</fullName>
    <label>Config Key</label>
    <type>Text</type>
    <length>80</length>
    <unique>true</unique>
    <description>Stable business key for this column config (e.g. Opportunity_Columns).</description>
</CustomField>