packages/pulse-core/force-app/main/default/objects/Action_Hub_Column_Config__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <type>Text</type>
    <length>80</length>
    <description>API name of the parent SObject (e.g. Opportunity). Use * for the generic fallback.</description>
</CustomField>